--- a/styleForm.css
+++ b/styleForm.css
@@ -13,10 +13,43 @@ display:block; /*Baixa de linea el text box*/
 cursor: text;
 }
 
+/*Aqui ponemos "focus" a todos los elementos del formulario*/
 .textbox:focus{
 border-width:3px;
 border-color:#5A5A5A;
 
+}
+
+#formNumero:focus{
+border-width:3px;
+border-color:#0000ff;
+}
+
+#formLista:focus{
+border-width:3px;
+border-color:#0000ff;
+}
+
+#formCheckbox:focus{
+border-width:3px;
+border-color:#0000ff;
+}
+
+#formPregunta1:focus{
+border-width:3px;
+border-color:#0000ff;
+}
+
+#areaTexto:focus{
+border-width:3px;
+border-color:#0000ff;
+}
+/*Aqui acabamos la tarea de poner "focus" a los elementos.*/
+
+/*Modificamos los "labels" principales, por eso los seleccionamos con una clase*/
+.tituloLabel {
+font-size: 1.2em;
+font-weight: bold;
 }
 
 #numero{
@@ -24,6 +57,7 @@ width:100px;
 display:block;
 }
 
+/*Aqui son las modificaciones que le hemos añadido al boton de envio del formulario*/
 #btnEnviar, #retorn{
     display: inline-block;
     background-color: #ff5733;
